<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weebly.ghostcoder.login.Login"
    android:background="@drawable/gradient"
    android:layout_gravity="center">

      <ImageView
          android:id="@+id/imageView"
          android:layout_width="200dp"
          android:layout_height="195dp"
          android:layout_marginTop="30dp"
          android:layout_centerHorizontal="true"
          android:background="@drawable/ghostcoder"
          android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/txtPassword"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="6dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#ffffff"
        android:textStyle="normal" android:drawableStart="@drawable/ic_person_black_24dp" android:layout_marginStart="6dp" android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/cardview"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="6dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#ffffff"
        android:textStyle="normal" android:layout_marginStart="6dp" android:layout_alignStart="@+id/txtUsername" android:drawableStart="@drawable/ic_lock_black_24dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        app:background="@drawable/gradient"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/textView"
            android:layout_alignLeft="@+id/cardview"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="12dp" android:layout_alignStart="@+id/cardview" android:layout_marginStart="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="171dp"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="18sp" android:layout_alignParentStart="true" android:layout_marginStart="171dp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/forgot_your_password"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp" android:layout_alignParentStart="true" />


</RelativeLayout>
