<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/img_register"
                    android:tint="@color/white"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square"
              />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="25dp">

                <ImageView
                    android:id="@+id/imgView_userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/gradient"
                    android:padding="8dp"
                    android:src="@drawable/img_user"
                    android:tint="@color/white"
                    android:contentDescription="@string/app_name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_userIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_userIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/username"
                    android:paddingLeft="20dp"
                    android:textSize="15sp"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imgView_passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/gradient"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white"
                    android:contentDescription="@string/app_name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_passwordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_passwordIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/pasword"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imgView_repasswordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/gradient"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white"
                    android:contentDescription="@string/app_name"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_repasswordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_repasswordIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/retype"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout3"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imgView_emailIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/gradient"
                    android:padding="8dp"
                    android:src="@drawable/img_email"
                    android:tint="@color/white"
                    android:contentDescription="@string/app_name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_emailIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_emailIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/email"
                    android:paddingLeft="20dp"
                    android:textSize="15sp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout4"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imgView_phoneIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/gradient"
                    android:padding="8dp"
                    android:src="@drawable/ic_contact_phone_black_24dp"
                    android:tint="@color/white"
                    android:contentDescription="@string/app_name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_phoneIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_phoneIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/phoneNumber"
                    android:paddingLeft="20dp"
                    android:textSize="15sp"
                    android:contentDescription="@string/app_name"/>

            </RelativeLayout>

            <CheckBox
                android:id="@+id/chkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout5"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif"
                android:text="I agree to the Terms of Service"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkBox1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/gradient"
                android:fontFamily="sans-serif-medium"
                android:text="@string/signup"
                android:textColor="@color/white" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_signUp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:background="@color/transparent"
                android:fontFamily="sans-serif"
                android:text="Already a member? Login Here"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="13sp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
